--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -45,6 +45,7 @@
             "ExternalSubnets",
             "InternalSubnets",
             "AssociatePublicIpAddress",
+            "CidrBlock",
             "KeyName",
             "SSLCertificateName"
           ]
@@ -66,6 +67,9 @@
         "CatalinaOpts": {
           "default": "Catalina options"
         },
+        "CidrBlock": {
+          "default": "0.0.0.0/0"
+        }
         "ClusterNodeMax": {
           "default": "Maximum number of cluster nodes"
         },
@@ -128,6 +132,14 @@
       ],
       "ConstraintDescription": "Must be 'true' or 'false'."
     },
+    "CidrBlock": {
+      "Description": "The CIDR IP range that is permitted to access the Bitbucket URL. Use 0.0.0.0/0 if you want public access from the internet.",
+      "Type": "String",
+      "MinLength": "9",
+      "MaxLength": "18",
+      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
+      "ConstraintDescription": "Must be a valid IP CIDR range of the form x.x.x.x/x."
+    },
     "ClusterNodeMax": {
       "Type": "Number",
       "Default": "1"
@@ -186,8 +198,8 @@
       "Default": "",
       "Description": "Database admin account password.",
       "Type": "String",
-      "MaxLength": "128",
       "MinLength": "8",
+      "MaxLength": "128",
       "AllowedPattern": "[a-zA-Z0-9]*",
       "ConstraintDescription": "Must be at least 8 alphanumeric characters."
     },
@@ -1043,7 +1055,7 @@
         "LoadBalancerAttributes": [
           {
             "Key": "idle_timeout.timeout_seconds",
-            "Value": "240"
+            "Value": "300"
           }
         ],
         "Subnets": {
@@ -1199,25 +1211,25 @@
             "IpProtocol": "tcp",
             "FromPort": "22",
             "ToPort": "22",
-            "CidrIp": "0.0.0.0/0"
+            "CidrIp": {
+              "Ref": "CidrBlock"
+            }
           },
           {
             "IpProtocol": "tcp",
             "FromPort": "80",
             "ToPort": "80",
-            "CidrIp": "0.0.0.0/0"
+            "CidrIp": {
+              "Ref": "CidrBlock"
+            }
           },
           {
             "IpProtocol": "tcp",
             "FromPort": "443",
             "ToPort": "443",
-            "CidrIp": "0.0.0.0/0"
-          },
-          {
-            "IpProtocol": "tcp",
-            "FromPort": "8091",
-            "ToPort": "8091",
-            "CidrIp": "0.0.0.0/0"
+            "CidrIp": {
+              "Ref": "CidrBlock"
+            }
           }
         ]
       }
