--- a/templates/JiraDataCenter.template
+++ b/templates/JiraDataCenter.template
@@ -410,59 +410,59 @@
     },
     "AWSRegionArch2AMI": {
       "us-east-1": {
-        "HVM64": "ami-5cc4cd4b",
+        "HVM64": "ami-abbab1bc",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ap-south-1": {
-        "HVM64": "ami-aefc8bc1",
+        "HVM64": "ami-4bd5a224",
         "HVMG2": "NOT_SUPPORTED"
       },
       "eu-west-2": {
-        "HVM64": "ami-20efe544",
+        "HVM64": "ami-f9e9e39d",
         "HVMG2": "NOT_SUPPORTED"
       },
       "eu-west-1": {
-        "HVM64": "ami-88dbfdfb",
+        "HVM64": "ami-07a38274",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ap-northeast-2": {
-        "HVM64": "ami-d7984eb9",
+        "HVM64": "ami-b2885edc",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ap-northeast-1": {
-        "HVM64": "ami-50c6a837",
+        "HVM64": "ami-ef127a88",
         "HVMG2": "NOT_SUPPORTED"
       },
       "sa-east-1": {
-        "HVM64": "ami-409b032c",
+        "HVM64": "ami-bfac34d3",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ca-central-1": {
-        "HVM64": "ami-54219330",
+        "HVM64": "ami-4827952c",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ap-southeast-1": {
-        "HVM64": "ami-9973dcfa",
+        "HVM64": "ami-3019b653",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ap-southeast-2": {
-        "HVM64": "ami-80447fe3",
+        "HVM64": "ami-cc053eaf",
         "HVMG2": "NOT_SUPPORTED"
       },
       "eu-central-1": {
-        "HVM64": "ami-fc75b493",
+        "HVM64": "ami-cbd111a4",
         "HVMG2": "NOT_SUPPORTED"
       },
       "us-east-2": {
-        "HVM64": "ami-a5c892c0",
+        "HVM64": "ami-19cf957c",
         "HVMG2": "NOT_SUPPORTED"
       },
       "us-west-1": {
-        "HVM64": "ami-0ad7816a",
+        "HVM64": "ami-42e8be22",
         "HVMG2": "NOT_SUPPORTED"
       },
       "us-west-2": {
-        "HVM64": "ami-de54e1be",
+        "HVM64": "ami-2fb2064f",
         "HVMG2": "NOT_SUPPORTED"
       }
     },
@@ -549,13 +549,15 @@
                   "Fn::Join": [
                     "",
                     [
+                      "ATL_NGINX_ENABLED=false\n",
                       "ATL_APP_DATA_MOUNT_ENABLED=false\n",
+                      "ATL_DB_NAME=jira\n",
+                      "ATL_DB_USER=jira\n",
                       "ATL_DB_PASSWORD=",
                       {
                         "Ref": "DBMasterUserPassword"
                       },
                       "\n",
-                      "ATL_DB_NAME=jira\n",
                       "ATL_DB_HOST=",
                       {
                         "Fn::GetAtt": [
@@ -607,17 +609,6 @@
                         ]
                       },
                       "\n",
-                      "ATL_JIRA_VERSION=",
-                      {
-                        "Fn::FindInMap": [
-                          "JIRAProduct2NameAndVersion",
-                          {
-                            "Ref": "JiraProduct"
-                          },
-                          "version"
-                        ]
-                      },
-                      "\n",
                       "ATL_JIRA_SHORT_DISPLAY_NAME=",
                       {
                         "Fn::FindInMap": [
@@ -640,9 +631,8 @@
                         ]
                       },
                       "\n",
+                      "ATL_RELEASE_S3_BUCKET=atlassian-software\n",
                       "ATL_RELEASE_S3_PATH=releases/jira\n",
-                      "ATL_JIRA_DATA_CENTER=true\n",
-                      "ATL_NGINX_ENABLED=false\n",
                       "ATL_POSTGRES_ENABLED=false\n",
                       "ATL_PROXY_NAME=",
                       {
