CONFDEV-49185 - update CloudFormation template to YAML format and address some comments of Richard

--- a/templates/ConfluenceDataCenter.template
+++ b/templates/ConfluenceDataCenter.template
@@ -134,7 +134,7 @@ Parameters:
   DBMasterUserPassword:
     AllowedPattern: "[a-zA-Z0-9]*"
     ConstraintDescription: Must be at least 8 alphanumeric characters.
-    Default: "123456789"
+    Default: "postgres"
     Description: Database admin account password.
     NoEcho: True
     MinLength: 8
